[project]
name = "agentflow-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.3.0",
    "a2a-server>=0.6.1",
    "fastapi>=0.121.0",
    "google-adk>=1.17.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.38.0",
    "web3>=6.0.0",
    "requests>=2.31.0",
    # ag-ui-adk: AG-UI Protocol adapter for Google ADK agents
    # Allows ADK agents to communicate with the frontend using AG-UI Protocol
    "ag-ui-adk>=0.0.1",
    "litellm>=1.0.0",
    "uvicorn>=0.30.0",
]
[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
dev = [
    "ruff>=0.6.0",
    "black>=24.0.0",
]

[tool.ruff.lint]
# Ignore E402 (module level import not at top of file) - these are intentional
ignore = ["E402"]
